Fix height on page wrap in mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -186,4 +186,7 @@ header{
   .sideNav__list{
     display:block;
   }
+  .feev__router-page--wrap{
+    height:100%;
+  }
 }
